--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: NewsFul
+name: Project101
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
 
 dev_dependencies:
+  http: ^0.12.2
   flutter_test:
     sdk: flutter
 
@@ -43,6 +44,26 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+     - images/img.png
+     - images/lake.jpg
+     - images/ss.png
+     - images/sports.jpg
+     - images/politics.jpg
+     - images/business.jpg
+     - images/ENTERTAINMENT.jpg
+     - images/Technology.jpg
+     - images/fashion.jpg
+     - images/Screenshot_categories.png
+   
+  fonts:
+     - family: BeeSerif
+       fonts:
+         - asset: fonts/BreeSerif-Regular.ttf
+     - family: Galada
+       fonts:
+         - asset: fonts/Galada-Regular.ttf
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
